# nora_portal_test

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml  setup.cfg  setup.py
src/nora/: task_a1.py  task_a3.py  task_optional.py  utils.py
