[metadata]
name = nora
version = 1.0.0
author = shenyang
author_email = kevinyyets@gmail.com
description = nora portal test case
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yangCro/nora_portal_test
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6, <4
install_requires = 
    tqdm
    numpy
    fire
    matplotlib
    loguru
    seaborn
    pymongo
    schedule

[options.packages.find]
where = src
